<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/const_request2"
    android:background="?selectableItemBackground"
    android:layout_marginBottom="@dimen/_5sdp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_search_profile_image2"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_55sdp"
        app:civ_border_color="@color/black"
        app:civ_border_width="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:src="@drawable/profile_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/user_search_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:singleLine="true"
        android:text="@string/nameTxt"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintLeft_toRightOf="@+id/user_search_profile_image2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_search_username2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:singleLine="true"
        android:text="@string/userNameTxt"
        android:textColor="@color/charcoal"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintLeft_toRightOf="@+id/user_search_profile_image2"
        app:layout_constraintTop_toBottomOf="@+id/user_search_name2" />

    <LinearLayout
        android:id="@+id/l1"
        android:orientation="horizontal"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_marginLeft="@dimen/_60sdp"
        app:layout_constraintTop_toBottomOf="@+id/user_search_username2"
        app:layout_constraintLeft_toRightOf="@+id/user_search_profile_image2">

        <Button
            android:layout_weight="1"
            android:id="@+id/accept_friend_request_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/acceptBtn"
            android:textColor="@color/white"
           />

        <Button
            android:layout_weight="1"
            android:id="@+id/decline_friend_request_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:text="@string/declineReqBtn"
            android:gravity="center"
            android:backgroundTint="@color/silver"
            android:textColor="@color/black"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>