<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginactivity.OTPVerification">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification_txt"
            android:textColor="@color/black"
            android:textSize="35dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/phoneview1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/wave"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/phoneview1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/splash_screen_logo"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/number"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_number_txt"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <com.mukesh.OtpView
            android:id="@+id/otp_view"
            android:layout_margin="15dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:inputType="number"
            android:itemBackground="@color/otp_view_background"
            app:OtpItemCount="6"
            app:OtpLineColor="@color/purple_500"
            android:focusableInTouchMode="true"
            app:OtpViewType="rectangle"
            />

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:layout_gravity="center"
            android:text="@string/nextBtn"
            android:backgroundTint="@color/purple_500"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>