<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.account.LoginWithPhone">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn_with_phone_txt"
            android:textColor="@color/black"
            android:textSize="35dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/phoneview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/wave"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/phoneview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/splash_screen_logo"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message3"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/phone_number_background"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                app:ccp_showFlag="false"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/black"/>

            <EditText
                android:id="@+id/et_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#05C9C2C2"
                android:hint="Mobile Number"
                android:inputType="number"
                android:maxLength="40"
                android:layout_marginLeft="@dimen/_4sdp"
                android:padding="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:layout_gravity="center"
            android:text="@string/nextBtn"
            android:backgroundTint="@color/purple_500"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>